--- a/PDM/se/app/build.gradle
+++ b/PDM/se/app/build.gradle
@@ -52,7 +52,10 @@ dependencies {
     // define a BOM and its version
     implementation(platform("com.squareup.okhttp3:okhttp-bom:3.12.10"))
     // define any required OkHttp artifacts without version
-    implementation("com.squareup.okhttp3:okhttp")
+    //implementation("com.squareup.okhttp3:okhttp")
     //implementation("com.squareup.okhttp3:logging-interceptor")
+    // https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp
+    implementation("com.squareup.okhttp3:okhttp:5.0.0-alpha.11")
+
 
 }
